# study-for-strands-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
00-basic/: 01_simple_agent.py  02_system_prompt.py  03_custom_tool.py  04_builtin_tools.py  05_conversation_memory.py  06_streaming.py  07_tool_context.py
01-agents-as-tools/: 01_basic_agent_as_tool.py  02_multiple_specialists.py  03_hierarchical_agents.py
02-graph/: 01_sequential_graph.py  02_conditional_graph.py  03_loop_graph.py  03_parallel_graph.py
03-swarm/: 01_basic_swarm.py  02_customer_support_swarm.py  02_dynamic_routing_swarm.py  03_backtrack_swarm.py  03_development_team_swarm.py
04-workflow/: 01_basic_workflow.py  02_parallel_workflow.py  03_complex_dag_workflow.py
05-a2a/: 01_a2a_server.py  02_a2a_client.py  03_a2a_demo.py
06-composite/: 01_content_pipeline.py  02_planning_with_swarm.py  03_full_composite.py
